--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body{
     font-family: Roboto;
     background-image: url("image/beijing.png");
-    background-size: 100%;
-    background-position: center;
+    background-size: 100% 100%;
+    height: 650px;
+    width: 100%;
+    background-repeat: no-repeat;
     overflow: hidden;
 }
 
