--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 body{
     font-family: Roboto;
     background-image: url("image/beijing.png");
-    background-size: 100% 100%;
-    height: 650px;
-    width: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
 }
